.k8s/apps/sable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: sable
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sable
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 56545783341a1a754240a9d5e8d86dba905774f2
    kubenix/module-instance: sable
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: sable
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: sable
      app.kubernetes.io/name: sable
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 9fc29c22e3023927276eeb72f244a2ea59f3e68866149efd7cc797dc05fc353e
        sable.josevictor.me/config-hash: b332bb1318a3303696552327b4f9cf54f9cf8c7df000fd4fdc7e73948ffe7b5e
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: sable
        app.kubernetes.io/name: sable
    spec:
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/josevictorferreira/sable:48abdf4@sha256:a7c44398a57aff568c8293368369be8f11bcb637d0e1cfaf5daef9fa5b974569
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 5
          name: main
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /app/config.json
              name: config
              readOnly: true
              subPath: config.json
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
        - name: ghcr-registry-secret
      serviceAccountName: default
      volumes:
        - configMap:
            items:
              - key: config.json
                path: config.json
            name: sable
          name: config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.166
    lbipam.cilium.io/sharing-key: sable
  labels:
    app.kubernetes.io/instance: sable
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sable
    app.kubernetes.io/service: sable
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 56545783341a1a754240a9d5e8d86dba905774f2
    kubenix/module-instance: sable
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: sable
  namespace: apps
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: sable
    app.kubernetes.io/name: sable
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: sable
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sable
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 56545783341a1a754240a9d5e8d86dba905774f2
    kubenix/module-instance: sable
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: sable
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: sable.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: sable
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sable.josevictor.me
      secretName: wildcard-tls
